# SimpleAgent

./: .gitignore  01-visual-agent-builder.md  02-browser-automation-engine.md  03-local-directory-tools.md  04-workflow-orchestration.md  05-debugging-deployment.md  design.md  launch.sh  package-lock.json
benchmark_agent/: mui-component-examples.md  tasks.md  testable-components.md  workplan.md
benchmark_agent/Challenge/: challenge.html  index.html
benchmark_agent/Challenge/src/: README.md  base-template.html
benchmark_agent/Challenge/src/data-display/: avatar.html  badge.html  chip.html  divider.html  icons.html  list.html  table.html  tooltip.html  typography.html
benchmark_agent/Challenge/src/feedback/: alert.html  backdrop.html  dialog.html  progress.html  skeleton.html  snackbar.html
benchmark_agent/Challenge/src/inputs/: autocomplete.html  button-group.html  button.html  checkbox.html  fab.html  radio-group.html  rating.html  select.html  slider.html  switch.html  textfield.html  (+2 more)
benchmark_agent/lab/: timeline-challenge.html  treeview-challenge.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AgentBuilder.css  AgentBuilder.tsx
frontend/src/services/: api.ts
frontend/src/types/: agent.ts
service/: .env.example  .gitignore  README.md  pyproject.toml  run.sh  test_browser.py
service/app/: main.py
service/app/api/: routes.py
service/app/core/: browser_engine.py  config.py
service/app/models/: agent.py
service/app/schemas/: agent.py
service/app/services/: file_tools.py
(+38 files in other folders)
