[project]
name = "simple-agent"
version = "0.1.0"
description = "Visual browser automation platform"
requires-python = ">=3.9"
dependencies = [
    "browser-use",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.48.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "redis>=5.2.1",
    "celery>=5.4.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "Pillow>=11.1.0",
    "jinja2>=3.1.4",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true